# infra

./: .gitmodules  .pre-commit-config.yaml  .tflint.hcl  ansible.cfg  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  codeberg-sync.yml
ansible/: inventory
ansible/host_vars/: caffe.yml
ansible/playbooks/: certbot.yml  searxng.yml  slackroll-v51-noarch-1_slack15.0acl.txz  slackroll.yml
ansible/playbooks/roles/certbot/: README.md
ansible/playbooks/roles/certbot/defaults/: main.yml
ansible/playbooks/roles/certbot/meta/: main.yml
ansible/playbooks/roles/certbot/tasks/: main.yml
ansible/playbooks/roles/ntp/: README.md
ansible/playbooks/roles/ntp/defaults/: main.yml
ansible/playbooks/roles/ntp/handlers/: main.yml
ansible/playbooks/roles/ntp/meta/: main.yml
ansible/playbooks/roles/ntp/tasks/: main.yml
ansible/playbooks/roles/ntp/templates/: ntp.conf.j2
ansible/playbooks/roles/postgresql/: README.md
ansible/playbooks/roles/postgresql/meta/: main.yml
ansible/playbooks/roles/postgresql/tasks/: main.yml
ansible/playbooks/roles/prosody/: README.md
ansible/playbooks/roles/searxng/: README.md
ansible/playbooks/roles/slackroll/: README.md
tf/mail/: .terraform.lock.hcl  config.tf  main.tf  variables.tf
tf/modules/koinobori-role/: config.tf  main.tf
tf/modules/mail-role/: config.tf  main.tf  variables.tf
tf/modules/sbobot-role/: config.tf  main.tf
tf/modules/searxng-infra-role/: main.tf
tf/state/: .terraform.lock.hcl  config.tf  main.tf
tf/static/: .terraform.lock.hcl  config.tf  main.tf
(+14 files in other folders)
