[tool.poetry]
name = "infra"
version = "0.1.0"
description = "Infrastructure"
authors = ["Andrew Clemons <andrew.clemons@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
ansible = "10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
